force-app/main/default/objects/PlanQuantityHistory__c/PlanQuantityHistory__c.object-meta.xml
<CustomObject>
    <label>PlanQuantityHistory</label>
    <nameField>
        <label>PlanQuantityHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PlanQuantityHistorys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>