force-app/main/default/objects/PlanQuantityHistory__c/fields/startDate__c.field-meta.xml
<CustomField>
    <fullName>startDate__c</fullName>
    <label>startDate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>